fix(css): fix menu dropdown visibility issues
Give menu a higher z-index so the dropdown sub menu will not hide
behind slider.

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -59,7 +59,8 @@ h1 {
 		{
 			width: 100%; /* 1000 */
 			margin-top:-1em;
-			z-index:999;
+			z-index:9999;
+			position:relative;
 		}
 
 			#nav > a
